css/styles.css
/* ... */
#send-button {
    margin: 0 auto;
    padding: 5px 40px;
    background-color: var(--dark-blue);
    color: var(--white);
    border-radius: 5px;
    font-family: inherit;
    font-size: 1rem;
    font-weight: 600;
    letter-spacing: .5px;
    text-transform: uppercase;
    transition: all .5s ease;
    border: none;
}

#send-button:hover,
#send-button:focus {
    transform: scale(1.2);
    background-color: var(--green);
}

.success input,
.success textarea {
	border-color: var(--green);
}

.error input,
.error textarea {
	border-color: var(--red);
}
.success i.fa-solid.fa-circle-check {
	color: var(--green);
	visibility: visible;
}

.error i.fa-solid.fa-circle-exclamation {
	color: var(--red);
	visibility: visible;
}

.form-control.error small {
	visibility: visible;
}

/* ============================================================================================================
                                                
                                            MEDIA QUERIES

===============================================================================================================*/

@media screen and (min-width: 320px) {
    .projects-footer {
        max-width: 350px;
    }

    #portfolio-container {
        width: 300px;
    }

    .photo-overlay h2 {
        font-size: 1.5rem;
    }

    .photo-overlay-p {
        font-size: 1.1rem;
    }

    .photo-overlay a {
        font-size: 1.1rem;
    }

    .projects-wrapper {
        font-size: 1.2rem;
    }

    .project-container,
    .project-photo,
    .project-photo img,
    .photo-overlay {
        max-height: 168px;
    }
}

@media screen and (min-width: 600px) {
    .about h1,
    .projects h1,
    .contact h1 {
        font-size: 3rem;
    }

    .about-wrapper {
        width: 95%;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        padding: 30px 0px;
    }
    
    .about-right,
    .about-left {
        width: 100%;
        max-width: 550px;
        margin: 0;
    }

    .about-left {
        padding: 0;
    }

    .about-right {
        padding: 0 0 0 20px;
    }

    .about-p {
        margin: 20px 10px 20px 0;
        font-size: .8rem;
    }

    .about-button-container {
        margin: 0;
    }

    .about-button-wrapper:first-of-type {
        margin-bottom: 10px;
    }

    .about-button {
        font-size: 1.5rem;
    }

    .profile-img {
        max-width: 350px;
    }
    
    /* form {
        max-width: 250px;
    } */

    #pop-up-box {
        padding: 40px;
    }

    #pop-up-box h2,
    .close {
        font-size: 2rem;
    }

    #education li, #skills li {
        font-size: 1.1rem;
    }
}

@media screen and (min-height: 600px) {
    .contact {
        bottom: 0;
    }

}

@media screen and (min-width: 320px) and (min-height: 400px) {

    header {
        font-size: medium;
    }

    #logo {
        height: 35px;
    }

    .header-right li {
        margin-left: 30px;
    }

    .nav ul {
        max-height: 250px;
    }

    .nav li {
        font-size: 2.5rem;
    }

    .home h1 {
        font-size: 1.25rem;
    }

    .full-name {
        font-size: 2rem;
    }

    .nickname {
        font-size: 2.5rem;
    }

    .home h2 {
        margin: 7px 0 10px;
        font-size: 1rem;
    }

    .home-links-container {
        flex-direction: column;
    }

    .home-link-wrapper:first-of-type {
        margin: 5px 0 10px;
    }

    .home-link {
        font-size: 1.2rem;
    }

    footer p {
        font-size: small;
    }
}

@media screen and (min-width: 600px) and (min-height: 500px) {
    .about {
        bottom: 0;
        display: flex;
    }

    header {
        font-size: large;
    }
}

@media screen and (min-width: 768px) and (min-height: 400px) {

    header {
        font-size: x-large;
    }

    #logo {
        height: 50px;
    }

    .header-right li {
        margin-left: 40px;
    }

    .nav ul {
        max-height: 300px;
        padding-left: 20vw;
    }

    .nav li {
        font-size: 3rem;
    }

    .home h1 {
        font-size: 1.5rem;
    }

    .full-name {
        font-size: 2.5rem;
    }

    .nickname {
        font-size: 3rem;
    }

    .home h2 {
        margin: 10px 0 15px;
        font-size: 1.3rem;
    }

    .home-link {
        font-size: 1.5rem;
    }

    footer p {
        font-size: medium;
    }

    .about h1,
    .projects h1,
    .contact h1 {
        font-size: 3.25rem;
    }

    .about-wrapper {
        width: 650px;
    }

    .about-p {
        font-size: 1rem;
    }

    /* .about-button {
        font-size: 1.5rem;
    } */

    #pop-up-box {
        width: fit-content;
    }

    .contact svg {
        height: 45px;
        width: 55px;
    }
}

@media screen and (min-width: 768px) {
    .projects-wrapper {
        padding: 40px 0;
    }

    #portfolio-container {
        width: 700px;
    }

    #portfolio-container {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
    }

    .project-container {
		width: 47%;
		float: left;
	}

    .projects-footer {
        max-width: 500px;
        font-size: 1rem;
    }

    .projects-heading {
        align-items: flex-start;
    }

    .photo-overlay-p {
        font-size: 1.2rem;
    }
    
    .fr-photo-overlay-p {
        font-size: 1rem;
    }
}
/* ... */

